--- a/build.gradle
+++ b/build.gradle
@@ -12,6 +12,10 @@ buildscript {
     }
 }
 
+ext {
+    supportLibVersion = '23.4.0'  // variable that can be referenced to keep support libs consistent
+}
+
 allprojects {
     repositories {
         jcenter()
@@ -21,3 +25,4 @@ allprojects {
 task clean(type: Delete) {
     delete rootProject.buildDir
 }
+
